# opencv_sandbox

./: CMakeLists.txt
src/: CMakeLists.txt  display_image.cpp  large_image.cpp  resize_image.cpp
